--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.52  2006/05/01 06:39:21  andy
+Fix many typos (found by aspell).
+Add new TODO item.
+
 Revision 1.51  2006/04/30 20:37:49  zeus
 README is tailoded, WHY section is added.
 City tag is removed from core and rc file
@@ -186,4 +190,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
