--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.54  2006/05/01 10:22:08  andy
+Bugfix release 0.16.1.
+
 Revision 1.53  2006/05/01 08:01:05  andy
 Minor fixes in README.
 Fix bug in rename algorithm when file with generated filename already exists.
@@ -195,4 +198,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
