--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.55  2006/05/02 09:07:02  andy
+Wrote RESTRICTIONS section in README.
+
 Revision 1.54  2006/05/01 10:22:08  andy
 Bugfix release 0.16.1.
 
@@ -198,3 +201,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
