--- a/TODO
+++ b/TODO
@@ -20,4 +20,8 @@ TODO LIST
 
 -  decrease disk IO operations as possible
 
--  to review XMP tags related code
++- to review XMP tags related code
+
+-  to implement aggregation option ( to aggregate large bundle of files 
+   according the different time intervals, perhapse with some kind of 
+   euristics for analyzing the bigest time interval between shots )
