--- a/TODO
+++ b/TODO
@@ -25,3 +25,7 @@ TODO LIST
 -  to implement aggregation option ( to aggregate large bundle of files 
    according the different time intervals, perhapse with some kind of 
    euristics for analyzing the bigest time interval between shots )
+
+-  to make the file name counter format of the dynamic length, according 
+   the files number in the directory to process, i mean 0xx for the number 
+   less than 100, e.t.c.
