--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
 $Log$
+Revision 1.57  2006/05/03 21:59:52  zeus
+file aggregation via option --aggr-template has been implemented.
+control code for file name originality has been moved from template2name() to main().
+README edited
+
 Revision 1.56  2006/05/02 19:08:59  zeus
 item about aggregation is added to TODO.
-minor language ixes in README
+minor language ixes in README.
 
 Revision 1.55  2006/05/02 09:07:02  andy
 Wrote RESTRICTIONS section in README.
