--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.62  2006/05/06 15:17:04  andy
+Expand TODO semantics.
+
 Revision 1.61  2006/05/06 14:51:04  andy
 Use --no-mtime as opposite to --mtime. Add $setMtime to config file.
 (Needs to be checked)
@@ -229,3 +232,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
