--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
-Zeus Panchenko <zeus@dn.farlep.net>
+Zeus Panchenko <zeusATdnDOTfarlepDOTnet>
 ICQ:198888060
 
-Andy Shevchenko <andy@smile.org.ua>
+Andy Shevchenko <andyATsmileDOTorgDOTua>
 ICQ:131403690
